-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0
-
None
Run an example like qopenglwidget that tries to create a QOpenGLTexture from a QImage on the NVIDIA Shield tablet (Tegra K1):
I/ActivityManager( 646): Displayed org.qtproject.example.qopenglwidget/org.qtproject.qt5.android.bindings.QtActivity: +561ms (total +43s677ms) D/libqopenglwidget.so( 9051): (null):0 ((null)): FT_New_Face failed with index 0 : 90 F/libc ( 9051): Fatal signal 11 (SIGSEGV), code 1, fault addr 0x0 in tid 9069 (QtThread) I/DEBUG ( 184): *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** *** I/DEBUG ( 184): Build fingerprint: 'nvidia/wx_na_wf/shieldtablet:5.0.1/LRX22C/29082_493.9700:user/release-keys' I/DEBUG ( 184): Revision: '0' I/DEBUG ( 184): ABI: 'arm' I/DEBUG ( 184): pid: 9051, tid: 9069, name: QtThread >>> org.qtproject.example.qopenglwidget <<< I/DEBUG ( 184): signal 11 (SIGSEGV), code 1 (SEGV_MAPERR), fault addr 0x0 I/DEBUG ( 184): r0 00000de1 r1 00000008 r2 00008058 r3 00000080 I/DEBUG ( 184): r4 00000000 r5 00008058 r6 00000008 r7 00000080 I/DEBUG ( 184): r8 788c8100 r9 00000de1 sl 00000001 fp 447a0000 I/DEBUG ( 184): ip 67070ec0 sp 784652e0 lr 7033c105 pc 00000000 cpsr 600d0010 I/DEBUG ( 184): I/DEBUG ( 184): backtrace: I/DEBUG ( 184): #00 pc 00000000 <unknown> I/DEBUG ( 184): #01 pc 0026e103 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Gui.so I/DEBUG ( 184): #02 pc 00266395 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Gui.so I/DEBUG ( 184): #03 pc 0026da97 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Gui.so (QOpenGLTexture::setData(QImage const&, QOpenGLTexture::MipMapGeneration)+90) I/DEBUG ( 184): #04 pc 0026dc2b /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Gui.so (QOpenGLTexture::QOpenGLTexture(QImage const&, QOpenGLTexture::MipMapGeneration)+230) I/DEBUG ( 184): #05 pc 00007cc7 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libqopenglwidget.so (GLWidget::initializeGL()+62) I/DEBUG ( 184): #06 pc 0011e497 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so I/DEBUG ( 184): #07 pc 0011e4e7 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QOpenGLWidget::resizeEvent(QResizeEvent*)+26) I/DEBUG ( 184): #08 pc 00112795 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::event(QEvent*)+1240) I/DEBUG ( 184): #09 pc 000f3975 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QApplicationPrivate::notify_helper(QObject*, QEvent*)+104) I/DEBUG ( 184): #10 pc 000f6ea5 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QApplication::notify(QObject*, QEvent*)+3556) I/DEBUG ( 184): #11 pc 001b0c0b /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Core.so (QCoreApplication::notifyInternal(QObject*, QEvent*)+62) I/DEBUG ( 184): #12 pc 0010eb6f /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::sendPendingMoveAndResizeEvents(bool, bool)+138) I/DEBUG ( 184): #13 pc 00110953 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::show_helper()+26) I/DEBUG ( 184): #14 pc 00112245 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::setVisible(bool)+680) I/DEBUG ( 184): #15 pc 00110803 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::showMaximized()+36) W/debuggerd( 184): type=1400 audit(0.0:7): avc: denied { search } for name="org.qtproject.example.qopenglwidget" dev="mmcblk0p24" ino=114698 scontext=u:r:debuggerd:s0 tcontext=u:object_r:app_data_file:s0 tclass=dir I/DEBUG ( 184): #16 pc 00110931 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::showChildren(bool)+146) I/DEBUG ( 184): #17 pc 00110969 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::show_helper()+48) I/DEBUG ( 184): #18 pc 00112245 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::setVisible(bool)+680) I/DEBUG ( 184): #19 pc 00110803 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::showMaximized()+36) I/DEBUG ( 184): #20 pc 00110931 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::showChildren(bool)+146) I/DEBUG ( 184): #21 pc 00110969 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidgetPrivate::show_helper()+48) I/DEBUG ( 184): #22 pc 00112245 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::setVisible(bool)+680) I/DEBUG ( 184): #23 pc 00110803 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libQt5Widgets.so (QWidget::showMaximized()+36) I/DEBUG ( 184): #24 pc 000065e5 /data/app/org.qtproject.example.qopenglwidget-1/lib/arm/libqopenglwidget.so (main+164) I/DEBUG ( 184): #25 pc 00019151 /data/data/org.qtproject.example.qopenglwidget/qt-reserved-files/plugins/platforms/android/libqtforandroid.so
The example works on desktop and embedded.
| For Gerrit Dashboard: QTBUG-44397 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 105857,1 | Prevent crashing on ES2 SDK - ES3 device scenarios with Android | dev | qt/qtbase | Status: ABANDONED | 0 | 0 |
| 105883,2 | Prevent crashing on ES2 SDK - ES3 device scenarios with Android | dev | qt/qtbase | Status: MERGED | +2 | 0 |